Added quote section.

--- a/index.html
+++ b/index.html
@@ -55,17 +55,18 @@
 </div>
 
 <div class="section-3">
+    <div class="quote-container">
+        <div class="quote">Do not be afraid to use google or go back to previous lessons to look something up. Real-life, professional developers use google constantly for things that they have been doing for years. At this point it is not expected that you will have everything memorized, so don’t worry about it. Additionally, there are a few small details that you may not have encountered in our lessons yet. This is by design. These details are minor, and easily searched (e.g. google css rounded corners).</div>
+        <div class="quote-author">- Odin Project</div>
+    </div>
+</div>
+
+
+
 
 </div>
 
 
 
 </body>
-
-
-
-
-
-
-
 </html>
