Added call to action section.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
     </div>
 </div>
 
+<div class="section-4">
+    <div class="call-to-action-container">
+        <div class="call-to-action-text">
+            <div class="call-to-action-header">Call to action! It's time!</div>
+            <div class="call-to-action-body">Sign up for our products by clicking that button right over there!</div>
+        </div>
+        <button class="sign-up-button">Sign up!</button>
+    </div>
 
 
 
