--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     </div>
 </div>
 
+
 <div class="section-4">
     <div class="call-to-action-container">
         <div class="call-to-action-text">
@@ -69,9 +70,11 @@
         </div>
         <button class="sign-up-button">Sign up!</button>
     </div>
+</div>
 
 
-
+<div class="footer">
+    <div class="footer-text">Copyright @ The Odin Project 2021</div>
 </div>
 
 
