Changed the hero text and quote text.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="sign-up-info">
             <div class="container">
             <div class="hero-text">This website is awesome</div>
-            <div class="information">I'm in your area. I'm in your area. I'm in your area. I'm in your area. I'm in your area. I'm in your area. I'm in your area. </div>
+            <div class="information">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eleifend orci et sem lacinia dapibus. Donec iaculis neque ut augue rutrum, quis auctor nisl fermentum. </div>
             <button class="sign-up">Sign up!</button>
             </div>
         </div>
@@ -57,7 +57,7 @@
 <div class="section-3">
     <div class="quote-container">
         <div class="quote">Do not be afraid to use google or go back to previous lessons to look something up. Real-life, professional developers use google constantly for things that they have been doing for years. At this point it is not expected that you will have everything memorized, so don’t worry about it. Additionally, there are a few small details that you may not have encountered in our lessons yet. This is by design. These details are minor, and easily searched (e.g. google css rounded corners).</div>
-        <div class="quote-author">- Odin Project</div>
+        <div class="quote-author">- The Odin Project</div>
     </div>
 </div>
 
